# VideoOSD

./: CMakeLists.txt  README.md  app.py  config.json  main.cpp
VideoOSD/: VideoOSD.cpp  VideoOSD.h
static/: style.css
templates/: login.html  settings.html
